crates/sui/src/unit_tests/snapshots/sui__upgrade_compatibility__upgrade_compatibility_tests__declarations_missing.snap
---
source: crates/sui/src/unit_tests/upgrade_compatibility_tests.rs
expression: normalize_path(err.to_string())
---
error: struct is missing
  ┌─ /fixtures/upgrade_errors/declarations_missing_v2/sources/UpgradeErrors.move:7:18
  │
7 │ module upgrades::upgrades {
  │                  ^^^^^^^^ Module 'upgrades' expected struct 'StructToBeRemoved', but found none
  │
  = structs are part of a module's public interface and cannot be removed or changed during an upgrade, add back the struct 'StructToBeRemoved'.

error: enum is missing
  ┌─ /fixtures/upgrade_errors/declarations_missing_v2/sources/UpgradeErrors.move:7:18
  │
7 │ module upgrades::upgrades {
  │                  ^^^^^^^^ Module 'upgrades' expected enum 'EnumToBeRemoved', but found none
  │
  = enums are part of a module's public interface and cannot be removed or changed during an upgrade, add back the enum 'EnumToBeRemoved'.

error: public function is missing
  ┌─ /fixtures/upgrade_errors/declarations_missing_v2/sources/UpgradeErrors.move:7:18
  │
7 │ module upgrades::upgrades {
  │                  ^^^^^^^^ Module 'upgrades' expected public function 'fun_to_be_removed', but found none
  │
  = public functions are part of a module's public interface and cannot be removed or changed during an upgrade, add back the public function 'fun_to_be_removed'.


Upgrade failed, this package requires changes to be compatible with the existing package. Its upgrade policy is set to 'Compatible'.
